# core

./: Cargo.toml  Justfile  README.md  bacon.toml  changeset-config.schema.json  justfile
.github/workflows/: rust.yml
src/: changelog.rs  changeset.rs  cli.rs  config.rs  main.rs  plugin.rs  utils.rs
tests/: cli.rs
