[package]
name = "changeset"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
cliclack = "0.3.5"
confy = "0.6.1"
extism = "1.10.0"
home = "0.5.11"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
semver = "1.0.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.6.0"
env_logger = "0.11.6"
log = "0.4.26"
extism-convert = "1.10.0"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
pretty_assertions = "1.4.1"

[profile.release]
lto = true

[profile.dev]
incremental = true

[lints.clippy]
needless-return = "allow"
