[package]
name = "changeset"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
cliclack = "0.3.6"
confy = "0.6.1"
extism = "1.10.0"
home = "0.5.11"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.6.0"
env_logger = "0.11.8"
log = "0.4.27"
extism-convert = "1.10.0"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.19.1"
pretty_assertions = "1.4.1"

[profile.release]
lto = true

[profile.dev]
incremental = true

[lints.clippy]
needless-return = "allow"
